# klipperethercat

./: README.md
CM4 Ethercat/: CLAUDE_CODE_INSTRUCTIONS ETHERCAT CM4.md  CMakeLists.txt  LC10E_slave_description.xml  Makefile  SETUP_GUIDE.md
CM4 Ethercat/config/: core_rtheta_printer.cfg  example_printer.cfg
CM4 Ethercat/klippy/extras/: ethercat_autotune.py  ethercat_homing.py  ethercat_servo.py  ethercat_shm.py  ethercat_stepper.py
CM4 Ethercat/klippy/kinematics/: core_rtheta.py
CM4 Ethercat/profiles/: lichuan_lc10e.py
CM4 Ethercat/scripts/: configure_rt.sh  install.sh  setup_etherlab.sh  setup_rt_kernel.sh  verify_rt_setup.sh
CM4 Ethercat/src/: autotune.c  autotune.h  cia402.c  cia402.h  ethercat_rt.c  lc10e_pdo.h  pid_controller.c  pid_controller.h  shared_mem.c  shared_mem.h  trajectory_interp.c  trajectory_interp.h
CM4 Ethercat/tests/: test_cia402.c  test_pid.c  test_shared_mem.c  test_trajectory.c
